# QF_Player

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.517e848  CMakeLists.txt.user.59da8a4  README.md  app_icon.rc
.cache/clangd/index/: client.h.DE1E990DD783E38B.idx  durationcontroller.cpp.635E81D2D42031DC.idx  durationcontroller.h.8B2F599F6B4696B8.idx  main.cpp.A0189EF38313CC5D.idx  mainwindow.cpp.F3FF3E305BBD17D6.idx  mainwindow.h.03C703CCD27ACBAA.idx  mediaosd.cpp.75AE7956A7CD7455.idx  mediaosd.h.9490B89A3DACC67A.idx  player.cpp.EF9EF4B7D6D3DAA3.idx  player.h.E8B3735FFA6EC094.idx  playercontroller.cpp.0A465AF1493D5862.idx  playercontroller.h.33893A415059E59E.idx  test_player.cpp.5E4B167FCCC55F22.idx  test_playercontroller.cpp.1C2EBA07CCE5EC0C.idx  test_track.cpp.5009AAFFA3777E3A.idx  track.cpp.B1DEFB9290EB4BC3.idx  track.h.C6B1D4199F9DD6A7.idx
.github/workflows/: ci.yml
resources/: resources.qrc
resources/images/: images.jfif
scripts/: fetch_mpv_arch.sh  fetch_mpv_linux.sh  fetch_mpv_win.ps1
src/: changebackground.cpp  changebackground.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  track.cpp  track.h
src/controller/: durationcontroller.cpp  durationcontroller.h  playercontroller.cpp  playercontroller.h
src/integration/: linuxmediakeys.cpp  linuxmediakeys.h  mediaosd.cpp  mediaosd.h  mpris_service.cpp  mpris_service.h
src/model/: track.cpp  track.h
src/player/: player.cpp  player.h
src/view/: mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: CMakeLists.txt  test_player.cpp  test_playercontroller.cpp  test_track.cpp
